Fix: images not centered and not taking full width on larger screens

--- a/styles/xCapeDetails.module.scss
+++ b/styles/xCapeDetails.module.scss
@@ -1,126 +1,139 @@
 .details__title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 3rem 0 2rem 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	margin: 3rem 0 2rem 0;
 
-  @media screen and (max-width: 768px) {
-    gap: 2rem;
-  }
+	@media screen and (max-width: 768px) {
+		gap: 2rem;
+	}
 }
 
 // Hero styles
 .details__hero {
-  position: relative;
+	position: relative;
+	width: 100%;
 
-  .heading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 10;
-    color: #fff;
-    font-size: 3rem;
-    width: 100%;
-    text-align: center;
+	span {
+		width: 100%;
+		img {
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
+	}
+	.heading {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		z-index: 10;
+		color: #fff;
+		font-size: 3rem;
+		width: 100%;
+		text-align: center;
 
-    @media screen and (max-width: 768px) {
-      font-size: 2rem;
-    }
-  }
+		@media screen and (max-width: 768px) {
+			font-size: 2rem;
+		}
+	}
 }
 
 // Features styles
 .features__container {
-  margin-bottom: 4rem;
+	margin-bottom: 4rem;
 
-  .features__row {
-    display: flex;
+	.features__row {
+		display: flex;
 
-    @media screen and (max-width: 900px) {
-      flex-direction: column;
-    }
+		@media screen and (max-width: 900px) {
+			flex-direction: column;
+		}
 
-    .features__img {
-      width: 50%;
-      @media screen and (max-width: 900px) {
-        width: 100%;
-        order: 1;
-      }
-    }
+		.features__img {
+			width: 50%;
+			@media screen and (max-width: 900px) {
+				width: 100%;
+				order: 1;
+			}
+		}
 
-    .features__text {
-      font-size: 1.4rem;
-      margin: auto auto;
-      list-style: circle;
-      gap: 1.4rem;
-      padding: 0 2rem;
-      box-sizing: border-box;
-      @media screen and (max-width: 900px) {
-        width: 100%;
-        order: 2;
-        margin-bottom: 4rem;
-      }
+		.features__text {
+			font-size: 1.4rem;
+			margin: auto auto;
+			list-style: circle;
+			gap: 1.4rem;
+			padding: 0 2rem;
+			box-sizing: border-box;
+			@media screen and (max-width: 900px) {
+				width: 100%;
+				order: 2;
+				margin-bottom: 4rem;
+			}
 
-      li {
-        padding: 1rem;
-        list-style-position: inside;
-        text-indent: -1.2em;
-        padding-left: 1.2em;
-      }
-    }
-  }
+			li {
+				padding: 1rem;
+				list-style-position: inside;
+				text-indent: -1.2em;
+				padding-left: 1.2em;
+			}
+		}
+	}
 }
 
 // Variant styles
 .variant__container {
-  display: flex;
-  margin-bottom: 4rem;
+	display: flex;
+	margin-bottom: 4rem;
 
-  @media screen and (max-width: 900px) {
-    flex-direction: column;
-    width: 100%;
-    order: 1;
-  }
+	@media screen and (max-width: 900px) {
+		flex-direction: column;
+		width: 100%;
+		order: 1;
+	}
 
-  h3 {
-    text-align: center;
-  }
+	h3 {
+		text-align: center;
+	}
 }
 
 .variant__gold {
-  h3 {
-    text-align: center;
-  }
+	display: flex;
+	flex-direction: column;
+	margin: auto;
+
+	h3 {
+		text-align: center;
+	}
 }
 
 // Carousel styles
 .carousel__item {
-  min-width: 30rem;
-  width: 30rem;
-  padding: 40px;
+	min-width: 30rem;
+	width: 30rem;
+	padding: 40px;
 
-  span img {
-    width: 100%;
-    height: 100%;
-    border-radius: 1rem;
-    pointer-events: none;
-  }
+	span img {
+		width: 100%;
+		height: 100%;
+		border-radius: 1rem;
+		pointer-events: none;
+	}
 }
 
 .innerCarousel {
-  display: flex;
+	display: flex;
 }
 
 .carousel {
-  cursor: grab;
-  overflow: hidden;
-  max-width: 1000px;
-  margin: auto;
+	cursor: grab;
+	overflow: hidden;
+	max-width: 1000px;
+	margin: auto;
 
-  @media screen and (max-width: 999px) {
-    max-width: 90%;
-  }
+	@media screen and (max-width: 999px) {
+		max-width: 90%;
+	}
 }
